# OpenH-RF

./: .gitignore  README.md  pyproject.toml
.claude/skills/openh-rf-submission-eval/references/: zea-format-notes.md
.claude/skills/openh-rf-submission-eval/references/dimensions/: 01-format.md
.claude/skills/openh-rf-submission-eval/scripts/: pipeline_template.py  validate_zea_spec.py
.github/workflows/: test-scripts.yml
examples/: .gitignore  save_pipeline_example.py
examples/nv-raw2insights-us/: README.md  convert.py  convert_nv_raw2insights_us.py  pipeline.yaml  reconstruct.py  reconstruct_nv_raw2insights_us.py
examples/pala/: README.md  convert.py  pipeline.yaml  reconstruct.py
examples/pala-ulm-ratbrain/: convert.py
examples/saving/: segmentation_map_example.py
examples/templates/: README.md
examples/templates/color-doppler/: README.md  convert.py  pipeline.yaml  reconstruct.py
examples/templates/echocardiography/: README.md  convert.py  pipeline.yaml  reconstruct.py
examples/templates/segmentation/: convert.py  pipeline.yaml  reconstruct.py
examples/templates/verasonics/: README.md  convert.py  pipeline.yaml  reconstruct.py
examples/tracked-cirs-phantom/: README.md  convert.py  reconstruct.py  reconstruct_3d.py
tests/: test_scripts.py
