[project]
name = "openh-rf"
version = "0.0.1"
description = "Tooling and examples for the OpenH-RF open ultrasound channel-capture dataset initiative."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "OpenH-RF Contributors" },
]
dependencies = [
    "zea @ git+https://github.com/tue-bmd/zea.git@b04f3499cffe95d7fbed1926d8279c85224053b2",
    "numpy",
    "huggingface_hub",
    "datasets",
    "matplotlib",
    "jax",
]

[project.optional-dependencies]
test = ["pytest"]
gpu = ["jax[cuda12]"]
torch = ["torch"]
tf = ["tensorflow"]
tf-gpu = ["tensorflow[and-cuda]"]

[project.urls]
Homepage = "https://github.com/open-h/OpenH-RF"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
markers = [
    "heavy: marks tests requiring network, GPU, or large downloads (deselect with '-m \"not heavy\"')",
]
